# simuladores

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: evals.yml  test.yml
agent_harness/: __init__.py  config.py
agent_harness/activities/: __init__.py  agent_loop.py  callback.py  factory.py  feedback_activities.py  implementations.py  investigator.py  planner.py  post_job.py  qa_review.py  synthesizer.py  tool_executor.py  vision_extract.py  web_verify.py
agent_harness/agents/: __init__.py  base.py  lamponne.py  mcp_executor.py  medina.py  qa_reviewer.py  ravenna.py  santos.py
agent_harness/core/: __init__.py  domain_registry.py  errors.py  feedback.py  operativo.py  permissions.py  plan.py  provider_config.py  registry.py  tool_schema_registry.py
agent_harness/diagnostics/: __init__.py  dce.py
agent_harness/domains/: __init__.py
agent_harness/export/: __init__.py  citation_matrix_excel.py
agent_harness/gateway/: __init__.py  __main__.py  app.py  auth.py  callback.py  dispatch.py  email_intake.py  feedback.py  rate_limiter.py  router.py
agent_harness/llm/: __init__.py  client.py  client_factory.py  gemini_client.py  instructor_client.py  loop_detection.py  tool_handler.py
agent_harness/memory/: __init__.py  bulletin.py  bulletin_store.py  domain_store.py  embeddings.py  graph.py  graph_store.py  mem0_backend.py  recall.py  semantic_store.py  session_store.py
agent_harness/observability/: __init__.py  audit.py  benchmarks.py  cache_monitor.py  logfire_config.py  logging.py  metrics.py
agent_harness/prompt/: __init__.py  builder.py  cache_adapter.py  compaction_client.py  compactor.py  injection_guard.py  tool_result_guard.py
agent_harness/storage/: gcs.py  (+3 more)
docs/: ARCHITECTURE.md  DATA_FLOW.md  DIAGRAMS.md  PROVIDERS.md  VISION.md
infra/: .env.example  Dockerfile  README.md  docker-compose.prod.yml
scripts/: dce_diag.py  run_dce_e2e.py
tests/: conftest.py  test_config.py  test_reasoning_effort.py  test_runtime_fixes.py
(+179 files in other folders)
